# ctf-assistant-framework

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  TASKS.md  dummy.md  pyproject.toml
docs/: LEARNING_LOG.md
src/ctf_assistant/: __init__.py  cli.py
src/ctf_assistant/ai/: __init__.py  base.py  gemini.py
src/ctf_assistant/engine/: __init__.py  detector.py  report.py  session.py  workflow.py
src/ctf_assistant/modules/: __init__.py  base.py
src/ctf_assistant/modules/forensics/: __init__.py
src/ctf_assistant/modules/forensics/archives/: __init__.py  module.py  workflow.py
src/ctf_assistant/modules/forensics/disk/: __init__.py  module.py  workflow.yaml
src/ctf_assistant/modules/forensics/file_analysis/: __init__.py  module.py  workflow.yaml
src/ctf_assistant/modules/forensics/log_analysis/: __init__.py  module.py  timeline.py  workflow.yaml
src/ctf_assistant/modules/forensics/malware_triage/: __init__.py  module.py  workflow.yaml  yara_scanner.py
src/ctf_assistant/modules/forensics/memory/: __init__.py  module.py  workflow.py
src/ctf_assistant/modules/forensics/pcap/: __init__.py  module.py  workflow.yaml
src/ctf_assistant/rag/: __init__.py  ingest.py  retriever.py  store.py
src/ctf_assistant/tui/: __init__.py  app.py
test_db/: chroma.sqlite3
tests/: .gitkeep  test_archives.py  test_detector.py  test_disk.py  test_file_analysis.py  test_log_analysis.py  test_malware_triage.py  test_memory.py  test_pcap.py  test_rag_store.py  test_report.py  test_report_export.py  test_session.py  test_steganography.py  test_workflow.py
(+4 files in other folders)
