[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctf-assistant"
version = "0.1.0"
description = "An interactive CTF investigation assistant framework."
readme = "CONTEXT.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "CTF Assistant Contributors" }
]
dependencies = [
    # Dependencies will be added in future tasks
]

[project.scripts]
ctf-assistant = "ctf_assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctf_assistant"]
